// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Form renders a snapshot successfully 1`] = `
<div>
  <h1
    className="title"
  >
    Log In
  </h1>
  <form
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <label
        className="label"
      >
        Email
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="email"
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="field"
    >
      <label
        className="label"
      >
        Password
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="password"
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Register Form renders a snapshot successfully 1`] = `
<div>
  <h1
    className="title"
  >
    Register
  </h1>
  <form
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <label
        className="label"
      >
        Username
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="username"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="field"
    >
      <label
        className="label"
      >
        Email
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="email"
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="field"
    >
      <label
        className="label"
      >
        Password
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="password"
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
